# api_embrapa_tech_1

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api_embrapa_tech_1/: main.py
api_embrapa_tech_1/api/: main.py
api_embrapa_tech_1/api/routes/: routes.py
api_embrapa_tech_1/embrapa_crawler/: crawler.py
api_embrapa_tech_1/utils/: conf.py
api_embrapa_tech_1/utils/config/: prod.yml
config/: prod.yml
tests/api/routes/: test_routes.py
tests/embrapa_crawler/: test_crawler.py
tests/utils/: test_conf.py
